<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet_trip"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:windowSoftInputMode="adjustPan"
    app:behavior_hideable="false"
    android:layout_margin="8dp"
    app:cardCornerRadius="@dimen/address_sbox_corner_raidus">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_horizontal|center_vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/booking_mini"
                        android:textSize="12sp"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/colorPrimaryDark"/>

                    <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/ic_mini"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/prec"
                        app:civ_border_width="0.5dp"
                        app:civ_border_color= "@color/black"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/booking_classic"
                        android:textSize="12sp"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/colorPrimaryDark"/>

                    <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/ic_classic"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/classic"
                        app:civ_border_width="0.5dp"
                        app:civ_border_color= "@color/black"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/booking_grand"
                        android:textSize="12sp"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/colorPrimaryDark"/>

                    <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/ic_grand"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/bmw"
                        app:civ_border_width="0.5dp"
                        app:civ_border_color= "@color/black" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/booking_plus"
                        android:textSize="12sp"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/colorPrimaryDark"/>

                    <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/ic_plus"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/range"
                        app:civ_border_width="0.5dp"
                        app:civ_border_color= "@color/black"/>

                </LinearLayout>

            </LinearLayout>

        <View
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line_ash"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/pickup_time"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/fare_esti"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textStyle="bold"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/capacity"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/pickup_time_text"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/fare_esti_text"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="1 - 4 Pax."
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark"/>

        </LinearLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>