<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity"
    android:id="@+id/mainView">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/map"
            tools:context=".MapsActivity"
            android:name="com.google.android.gms.maps.SupportMapFragment" />
    </FrameLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/pickup_location_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="10dp"
        android:minHeight="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="@dimen/address_sbox_corner_raidus">


        <android.support.constraint.ConstraintLayout
            android:id="@+id/drop_location_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/pickup_location_image"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:scaleX="0.5"
                        android:scaleY="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_near_me_black_24dp" />

                    <ImageView
                        android:id="@+id/image_separator"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:srcCompat="@drawable/ic_ellipse_set" />

                    <ImageView
                        android:id="@+id/drop_location_image"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="8dp"
                        android:scaleX="0.5"
                        android:scaleY="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_place_black_24dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/pick_up_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="5dp">

                        <android.support.design.widget.TextInputLayout

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/booking_hint_from"
                            android:layout_marginBottom="16dp"
                            android:layout_marginStart="8dp"
                            android:paddingStart="8dp"
                            android:paddingEnd="8dp">

                            <EditText
                                android:id="@+id/edt_pickup_location_address"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/white"
                                android:focusable="true"
                                android:focusableInTouchMode="true"
                                android:imeOptions="actionSearch"
                                android:singleLine="true"
                                android:textSize="16sp"
                                android:visibility="visible"
                                android:paddingTop="5dp"
                                />

                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                    <View
                        android:id="@+id/view"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_weight="1"
                        android:background="@drawable/splash_background"/>



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="5dp">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/cardholder_name_label"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/booking_hint_to"
                            android:layout_marginBottom="16dp"
                            android:layout_marginStart="8dp"
                            android:paddingStart="8dp"
                            android:paddingEnd="8dp">

                            <AutoCompleteTextView
                                android:id="@+id/edt_drop_location_address"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/white"
                                android:textSize="16sp"
                                android:visibility="visible"
                                android:singleLine="true"
                                android:focusable="true"
                                android:imeOptions="actionSearch"
                                android:focusableInTouchMode="true"
                                android:paddingTop="5dp"
                                />

                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/coordinatorCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/ic_gps"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_gps"/>
    </android.support.design.widget.CoordinatorLayout>


    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinatorCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/common_bottom_margin"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <include layout="@layout/bottom_sheet_vehicale_details" />

    </android.support.design.widget.CoordinatorLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="visible">

        <ImageButton
            android:id="@+id/btnSchedule"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="5"
            android:background="@color/colorPrimaryDark"
            android:src="@drawable/ic_schedule"
            android:textAllCaps="false"
            android:textSize="16sp" />


        <Button
            android:id="@+id/btnBookNow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/booking_book_now"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp" />


    </LinearLayout>


</android.support.constraint.ConstraintLayout>